syntax = "proto3";

option csharp_namespace = "eShop.ServicesCart.API.Protos.Cart";

package cart;

import "google/protobuf/wrappers.proto";

service DefaultCartService {
	rpc GetCart(UserNameRequest) returns (CartDto);
	rpc DeleteProductsInCart(UserNameRequest) returns (CountResponse);
	rpc DeleteProductInCartByIndex(UserNameIndexRequest) returns (CountResponse);
	rpc AddCountInCart(CountInCartRequest) returns (CountResponse);
	rpc AddProductInCart(AddProductInCartRequest) returns (CountResponse);
	rpc AddCouponInCart(AddCouponInCartRequest) returns (AddCouponInCartResponse);
	rpc DeleteCouponInCart(UserNameRequest) returns (DeleteCouponInCartResponse);
}

message Empty {

}

message AddCouponInCartRequest {
	string user_name = 1;
	string coupon_code = 2;
}

message AddCouponInCartResponse {
	bool is_added = 1;
}

message DeleteCouponInCartResponse {
	bool is_deleted = 1;
}


message CountInCartRequest {
	string user_name = 1;
	string object_id = 2;
	int32 count = 3;
}

message AddProductInCartRequest {
	string user_name = 1;
	int32 product_id = 2;
	int32 quantity = 3;
}

message CountResponse {
	int32 count = 1;
}

message UserNameRequest {
	string user_name = 1;
}

message UserNameIndexRequest {
	string user_name = 1;
	string object_id = 2;
}

message DeleteProductRequest {
	string user_name = 1;
	int32 id = 2;
}

message CartDto {
	repeated CartProductDto cart_products = 1;
	google.protobuf.StringValue coupon = 2;
}

message CartProductDto {
	int32 product_id = 1;
    int32 count = 2;
	int32 quantity = 3;
    string product_name = 4;
    string product_seller = 5;
    string product_brand = 6;
    string image_url = 7;
    double price = 8;
	string object_id = 9;
}